Fix prefs page on dark mode

--- a/userContent.css
+++ b/userContent.css
@@ -4,6 +4,11 @@
 
 /* Alas there's no body class to identify other settings pages like the Extensions page… */
 
+:root {  --in-content-page-background: #F3F5F8 !important; }
+@media (prefers-color-scheme: dark) {
+    :root { --in-content-page-background: rgb(28,27,34) !important; }
+}
+
 #preferences-body .navigation {
     background: #345;
     color: rgba(255,255,255,0.75);
@@ -44,7 +49,4 @@ search-textbox {
     border-top-color: rgba(0,0,0,0.4) !important;
     background-clip: padding-box !important;
     box-shadow: inset 0 1px 2px rgba(0,0,0,0.2), 0 1px 0 rgba(255,255,255,0.5) !important;
-}
-#preferences-body .sticky-container, #preferences-body .main-content {
-    background-color: #F3F5F8 !important;
 }
